# GenshinLyrePlayer

./: .gitignore  LICENSE  build_release.bat  build_release.ps1  pyproject.toml
.github/workflows/: ci.yml  release.yml
GenshinLyreMidiPlayer/GenshinLyreMidiPlayer.Data/Midi/: MidiFile.cs  TokenConverter.cs
GenshinLyreMidiPlayer/GenshinLyreMidiPlayer.WPF/: GenshinLyreMidiPlayer.WPF.csproj
GenshinLyreMidiPlayer/GenshinLyreMidiPlayer.WPF/Core/: LyreKeyViewModel.cs  VisualTokenViewModel.cs
GenshinLyreMidiPlayer/GenshinLyreMidiPlayer.WPF/Themes/: Windsong.xaml
GenshinLyreMidiPlayer/GenshinLyreMidiPlayer.WPF/ViewModels/: ConverterViewModel.cs  LyrePlayerViewModel.cs  MainWindowViewModel.cs  PianoSheetViewModel.cs  PlaylistViewModel.cs  TokenSheetEditorViewModel.cs
GenshinLyreMidiPlayer/GenshinLyreMidiPlayer.WPF/Views/: ConverterView.xaml.cs  LyrePlayerView.xaml.cs  MainWindowView.xaml  PianoSheetView.xaml  PlaylistView.xaml  SettingsPageView.xaml  TokenSheetEditorView.xaml.cs
GenshinLyrePlayer/: GenshinLyrePlayer.sln  THIRD-PARTY-NOTICES.md
GenshinLyrePlayer/GenshinLyrePlayer.Data/Midi/: MidiFile.cs
GenshinLyrePlayer/GenshinLyrePlayer.WPF/: App.xaml  GenshinLyrePlayer.WPF.csproj
GenshinLyrePlayer/GenshinLyrePlayer.WPF/Core/: VisualToken.cs
config/key_mappings/: lyre_scancodes.json
player_engine/: input_injector.py  key_mapper.py  player_pipeline.py  timing_scheduler.py  token_reader.py
tests/player_engine/: test_timing_scheduler.py  test_token_reader.py
vision_parser/: calibrator.py  panel_detector.py  parser_pipeline.py  roi_manager.py
(+16 files in other folders)
