[project]
name = "genshin-music"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
genshin-parse = "vision_parser.parser_pipeline:main"
genshin-play = "player_engine.player_pipeline:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
