[project]
name = "genshin-music"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
genshin-parse = "vision_parser.parser_pipeline:main"
genshin-play = "player_engine.player_pipeline:main"

[tool.setuptools.packages.find]
include = ["vision_parser*", "player_engine*", "shared*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
